fixed moile layout issue

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -836,7 +836,6 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
     padding-bottom: 405px;
-    z-index: -1;
 
     .hero-container {
       max-width: 500px;
@@ -1513,7 +1512,7 @@ header {
   }
   header {
     section {
-      box-shadow: inset 0 0 0 999999px #f9f9f952 !important;
+      //box-shadow: inset 0 0 0 999999px #f9f9f952 !important;
 
       &.landing-hero-container {
         padding-bottom: 0;
